addition of pt6311 separate class addition of function declarations, reworked signatures work in progress

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/keypad"]
 	path = src/keypad
 	url = https://github.com/lmiori92/keypad.git
+[submodule "src/timers"]
+	path = src/timers
+	url = git@github.com:lmiori92/timers.git
